syntax = "proto3";

//Important to be always same in every environment
package task;

import "google/protobuf/empty.proto";

message Empty {}

message TaskRequest {
  string id = 1;
}

message Task {
  string id = 1;
  string name = 2;
  string description = 3;
  bool done = 4;
  repeated string tags = 5;
}

message TaskList {
  repeated Task tasks = 1;
}

service TaskService {
  rpc CreateTask(Task) returns(TaskRequest) {}
  rpc ReadTask(TaskRequest) returns(Task) {}
  rpc ReadTasks(google.protobuf.Empty) returns(TaskList) {}
  rpc UpdateTask(Task) returns(google.protobuf.Empty) {}
  rpc DeleteTask(TaskRequest) returns(google.protobuf.Empty) {}
}